--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "moments",
+  "name": "carss",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
